[gd_scene load_steps=30 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://m5x7.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/Buttons/ButtonRight.png" type="Texture" id=3]
[ext_resource path="res://sprites/Buttons/ButtonLeft.png" type="Texture" id=4]
[ext_resource path="res://sprites/Buttons/ButtonRight2.png" type="Texture" id=5]
[ext_resource path="res://sprites/Buttons/ButtonLeft2.png" type="Texture" id=6]
[ext_resource path="res://scripts/Interface/Buttons.gd" type="Script" id=7]
[ext_resource path="res://scenes/UI/SoundMute.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Interface/Menus.gd" type="Script" id=9]
[ext_resource path="res://scripts/Interface/Control.gd" type="Script" id=10]
[ext_resource path="res://sprites/Buttons/circlebig.png" type="Texture" id=15]
[ext_resource path="res://sprites/Icons/timer.png" type="Texture" id=18]
[ext_resource path="res://scripts/Interface/TouchScreenButton.gd" type="Script" id=19]
[ext_resource path="res://sprites/Buttons/Pause.png" type="Texture" id=20]
[ext_resource path="res://sprites/Icons/death.png" type="Texture" id=21]
[ext_resource path="res://sprites/Buttons/DarkArea.png" type="Texture" id=22]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/circle.png-917a9bdc8b13880bb59c8f9707e123fb.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/circlegrey.png-60d35f55e7ee28a2c25f25b7df9d7335.stex"

[sub_resource type="CircleShape2D" id=3]
radius = 13.0

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = ExtResource( 2 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
render_mode unshaded;
 
uniform float width : hint_range(0.0, 16.0);
uniform vec4 outline_color : hint_color;
 
void fragment()
{
    vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0));
   
    vec4 sprite_color = texture(TEXTURE, UV);
   
    float alpha = sprite_color.a;
    alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
   
    vec3 final_color = mix(outline_color.rgb, sprite_color.rgb, sprite_color.a);
    COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/width = 1.0
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.552941, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.141176, 0.219608, 0.321569, 1 )

[sub_resource type="Animation" id=13]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "time"
}, {
"args": [  ],
"method": "death"
}, {
"args": [  ],
"method": "HBox"
} ]
}

[node name="Interface" type="CanvasLayer"]
pause_mode = 2

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 320.0
margin_bottom = 12.0
color = Color( 0.196078, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circlebig" type="Sprite" parent="Control"]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 264, 124 )
texture = ExtResource( 15 )

[node name="DarkArea" type="Sprite" parent="Control/circlebig"]
visible = false
texture = ExtResource( 22 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control/circlebig"]
pause_mode = 1
normal = SubResource( 1 )
pressed = SubResource( 2 )
shape = SubResource( 3 )
script = ExtResource( 19 )

[node name="Node2D" type="Node2D" parent="Control/circlebig/TouchScreenButton"]
position = Vector2( 16, 16 )

[node name="Label" type="Label" parent="Control/circlebig/TouchScreenButton"]
margin_left = -4.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 4 )
text = "400"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/circlebig/TouchScreenButton"]
wait_time = 0.01
one_shot = true

[node name="CheckGroundSlow" type="Timer" parent="Control/circlebig/TouchScreenButton"]
wait_time = 0.2
one_shot = true

[node name="Line2D" type="Line2D" parent="Control/circlebig"]
visible = false
points = PoolVector2Array( 0, 0, 32, 0 )
width = 1.0
default_color = Color( 1, 0.00392157, 0.00392157, 1 )

[node name="Node2D" type="Node2D" parent="Control"]
pause_mode = 1
position = Vector2( 16, 132 )
script = ExtResource( 7 )

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="Control/Node2D"]
position = Vector2( -4, 4 )
normal = ExtResource( 4 )
pressed = ExtResource( 6 )

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="Control/Node2D"]
position = Vector2( 44, 4 )
normal = ExtResource( 3 )
pressed = ExtResource( 5 )

[node name="Labels" type="Node2D" parent="Control"]

[node name="Timer" type="Label" parent="Control/Labels"]
visible = false
margin_left = 36.0
margin_top = -1.0
margin_right = 70.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 4 )
text = "9:59.99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="Control/Labels"]
visible = false
margin_left = 90.0
margin_top = -1.0
margin_right = 102.0
margin_bottom = 13.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="Control/Labels"]
margin_left = 295.0
margin_top = -1.0
margin_right = 319.0
margin_bottom = 13.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Level" type="Label" parent="Control/Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 141.0
margin_top = -1.0
margin_right = 179.0
margin_bottom = 13.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Sprite" parent="Control"]
visible = false
position = Vector2( 30, 6 )
texture = ExtResource( 18 )

[node name="death" type="Sprite" parent="Control"]
visible = false
position = Vector2( 84, 6 )
texture = ExtResource( 21 )

[node name="Menus" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="Menus"]
material = SubResource( 8 )
margin_left = -3.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 24.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
icon = ExtResource( 20 )
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="Menus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -50.0
margin_right = 55.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -57, 228 )
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="Menus/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = 50.0
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" parent="Menus/ColorRect" instance=ExtResource( 8 )]

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/ColorRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -41.0
margin_right = 46.0
margin_bottom = 41.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Menus/ColorRect/VBoxContainer"]
margin_right = 92.0
margin_bottom = 13.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  Resume"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Checkpoint" type="Button" parent="Menus/ColorRect/VBoxContainer"]
margin_top = 23.0
margin_right = 92.0
margin_bottom = 36.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  To checkpoint"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Restart" type="Button" parent="Menus/ColorRect/VBoxContainer"]
margin_top = 46.0
margin_right = 92.0
margin_bottom = 59.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  Restart"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Menu" type="Button" parent="Menus/ColorRect/VBoxContainer"]
margin_top = 69.0
margin_right = 92.0
margin_bottom = 82.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  To menu"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menus"]
anims/idle = SubResource( 13 )

[node name="ColorRect2" type="ColorRect" parent="Menus"]
visible = false
modulate = Color( 1, 1, 1, 0.75 )
self_modulate = Color( 1, 1, 1, 0.607843 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -67.5
margin_right = 120.0
margin_bottom = 67.5
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Completed" type="Label" parent="Menus/ColorRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.5
margin_right = 42.5
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Level completed!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Menus/ColorRect2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -15.0
margin_right = 93.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 4 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Best_time" type="Label" parent="Menus/ColorRect2"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.5
margin_top = 53.0
margin_right = 52.5
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "New record!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record_time" type="Label" parent="Menus/ColorRect2"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.5
margin_top = 53.0
margin_right = 52.5
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "Record:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="Menus/ColorRect2"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 1.0
margin_right = 93.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 4 )
text = "Deaths:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 46.5
margin_right = 128.0
margin_bottom = 59.5
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu2" type="Button" parent="Menus/ColorRect2/HBoxContainer"]
margin_right = 63.0
margin_bottom = 13.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  To menu  "
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Restart2" type="Button" parent="Menus/ColorRect2/HBoxContainer"]
margin_left = 78.0
margin_right = 137.0
margin_bottom = 13.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  Restart  "
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Next2" type="Button" parent="Menus/ColorRect2/HBoxContainer"]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 13.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.784314, 0.823529, 0.862745, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "  Next level  "
align = 0
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Control/circlebig/TouchScreenButton" to="Control/circlebig/TouchScreenButton" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Control/circlebig/TouchScreenButton" to="Control/circlebig/TouchScreenButton" method="_on_TouchScreenButton_released"]
[connection signal="timeout" from="Control/circlebig/TouchScreenButton/Timer" to="Control/circlebig/TouchScreenButton" method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/circlebig/TouchScreenButton/CheckGroundSlow" to="Control/circlebig/TouchScreenButton" method="_on_CheckGroundSlow_timeout"]
[connection signal="pressed" from="Control/Node2D/TouchScreenButtonLeft" to="Control/Node2D" method="_on_TouchScreenButtonLeft_pressed"]
[connection signal="released" from="Control/Node2D/TouchScreenButtonLeft" to="Control/Node2D" method="_on_TouchScreenButtonLeft_released"]
[connection signal="pressed" from="Control/Node2D/TouchScreenButtonRight" to="Control/Node2D" method="_on_TouchScreenButtonRight_pressed"]
[connection signal="released" from="Control/Node2D/TouchScreenButtonRight" to="Control/Node2D" method="_on_TouchScreenButtonRight_released"]
[connection signal="pressed" from="Menus/Pause" to="Menus" method="_on_Pause_pressed"]
[connection signal="pressed" from="Menus/ColorRect/VBoxContainer/Resume" to="Menus" method="_on_Resume_pressed"]
[connection signal="pressed" from="Menus/ColorRect/VBoxContainer/Checkpoint" to="Menus" method="_on_Checkpoint_pressed"]
[connection signal="pressed" from="Menus/ColorRect/VBoxContainer/Restart" to="Menus" method="_on_Restart_pressed"]
[connection signal="pressed" from="Menus/ColorRect/VBoxContainer/Menu" to="Menus" method="_on_Menu_pressed"]
[connection signal="pressed" from="Menus/ColorRect2/HBoxContainer/Menu2" to="Menus" method="_on_Menu2_pressed"]
[connection signal="pressed" from="Menus/ColorRect2/HBoxContainer/Restart2" to="Menus" method="_on_Restart2_pressed"]
[connection signal="pressed" from="Menus/ColorRect2/HBoxContainer/Next2" to="Menus" method="_on_Next2_pressed"]
